[metadata]
name = syne
version = 0.0.1.dev0
description = synesthesia-based debugging
long_description = file: README.mkd
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/syne
license = GPL
keywords = debugging, synesthesia
classifiers =
    Development Status :: 5 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    magwitch==0.1.0
    musthe==1.0.0
    numpy==1.14.5
    PyAudio==0.2.11
    pytest==3.6.3

[zest.releaser]
create-wheel = yes

[options.packages.find]
exclude =
    test
    examples
    poc
